Bug 60586 - [Template manager] Switching tabs does not update breadcrumbs
Summary: [Template manager] Switching tabs does not update breadcrumbs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium minor
Assignee: Jorendc
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-10 12:07 UTC by Mirosław Zalewski
Modified: 2014-02-07 15:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Breadcrumbs not updated in new template manager (27.28 KB, image/png)
2013-02-10 12:07 UTC, Mirosław Zalewski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mirosław Zalewski 2013-02-10 12:07:23 UTC
Created attachment 74536 [details]
Breadcrumbs not updated in new template manager

New template manager, introduced in 4.0.0, has breadcrumb navigation. Unfortunately, it is not correctly updated after switching tabs at top of window.

Steps to reproduce:
1. Open new template manager
2. Switch tab to Presentations
3. Descend into "Presentation backgrounds" directory
4. Switch tab to "Documents"

Result:
No templates are shown. Breadcrumb navigation still shows "All templates → Presentation backgrounds". See attached image (it's from Polish version of LO; "Prezentacje" means "Presentations", pretty similar to English).

Expected results:
Refresh breadcrumb navigation and change current directory to root. In above case, "MediaWiki" directory should be shown.

Best regards
Mirosław Zalewski
Comment 1 Jorendc 2013-02-10 13:29:10 UTC
Thanks for reporting!

I can confirm this behavior using Linux Mint 14 x64 and LibreOffice 4.0.0.3 rc3.
Therefore I mark this bug as NEW.

Following [1] I mark this bug as 'Minor Medium'.

Kind regards,
Joren

[1] https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 2 Rafael Dominguez 2013-03-09 18:08:52 UTC
Well it dosent show anything because you dont have any templates of that type in the folder, so im not sure if i should consider this a bug or not? Maybe a message should be shown that theres no templates of that type? Or we should change the behaviour to what you expect? Its not really clear to me how to approach this.
Comment 3 Mirosław Zalewski 2013-03-09 18:43:47 UTC
Well, new template manager gives impression that directories are exclusive for document types (so I can not put Writer template in "Presentation bacgrounds" dir). I know that technically this is not correct and each directory can contain templates for every program.

Due to this impression, I though that breadcrumbs were not updated. I did it even that I know how LO handles templates on filesystem-level. I think it is safe to assume that most users (who do not know about work done behind the doors) will expect the same I expected in original message and will consider this a bug.

Basically, this is caused by maybe-not-the-wisest design decision to make tabs act like a filters for content. Most users familiar with tabs (from web browsers, e-mail readers or file managers) expect that switching tabs changes context. In web browser I can be on one page in tab A and second page on tab B. In LibreOffice, in both tab A and tab B I am still in the same place; they just show me different things (and this filtering may result in empty list, further confusing me).
Using drop-down list for filtering would be much better. But this is on side-note.
Comment 4 Cédric Bosdonnat 2014-01-20 09:00:35 UTC Comment hidden (noise)
Comment 5 Jorendc 2014-02-06 18:06:35 UTC
Patch under review: https://gerrit.libreoffice.org/#/c/7905/
Comment 6 Commit Notification 2014-02-07 15:11:04 UTC
Joren De Cuyper committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0565a99a7598197f5354914927827fc7addd95f5

fdo#60586 - [Template manager] Switching tabs does not update breadcrumbs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jorendc 2014-02-07 15:32:52 UTC
lets mark this one as RESOLVED FIXED. Will have a try to backport the fixes.