fdo#60586 - [Template manager] Switching tabs does not update breadcrumbs

When applying a filter, lets go to the rootfolder of that filter

Change-Id: I7034584da65ec777aa3cc288e1423596312caeec